--- a/data.html
+++ b/data.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Data
+nav_order: 1
+---
+
 # Digital Twin Data
 Digital Twins are virtual representations of real-world physical objects, systems, or processes. These virtual replicas are created and maintained based on data collected from the corresponding physical entities. The data collected from sensors, devices, and other sources provide a continuous stream of information that fuels the Digital Twin's capabilities.
 
